--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,17 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: postgres
+  password: 12345
+  host: localhost
+
 
 development:
   <<: *default
   database: budget_App_development
+  username: postgres
+  password: 12345
+  host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,6 +65,9 @@ development:
 test:
   <<: *default
   database: budget_App_test
+  username: postgres
+  password: 12345
+  host: localhost
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
