--- a/config/database.yml
+++ b/config/database.yml
@@ -84,13 +84,14 @@ test:
 # URL environment variable explicitly:
 #
 #   production:
-#     url: <%= ENV["MY_APP_DATABASE_URL"] %>
+    url: <%= ENV["MY_APP_DATABASE_URL"] %>
 #
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
 production:
   <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
   database: budget_App_production
   username: budget_App
   password: <%= ENV["BUDGET_APP_DATABASE_PASSWORD"] %>
