--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,23 @@
-databases: 
-  -name : postgres
-  #  ipAllowList: []
+databases:
+  - name: postgres
+    ipAllowList: []
 
-servides:
-  -type: web
-  name: rails
-  env: ruby
-  buildCommand: "./bin/render-build.sh"
-  startCommand: bundle exec rails s
-  envvars:
-    -key: RAILS_MASTE_KEY 
-     sync: false
-     -key: DATABASE_URL
-    fromDatabase:
-      name: postgres
-      property: connectionString
-  -type: redis
-  name: redis
-  ipAllowList: []
-  plan: free
-  maxmemoryPolicy: neoviction
+services:
+  - type: web
+    name: rails
+    env: ruby
+    buildCommand: "./bin/render-build.sh"
+    startCommand: bundle exec rails s
+    envVars:
+      - key: RAILS_MASTER_KEY
+        sync: false
+      - key: DATABASE_URL
+        fromDatabase:
+          name: postgres
+          property: connectionString
+
+  - type: redis
+    name: redis
+    ipAllowList: []
+    plan: free
+    maxmemoryPolicy: noeviction
