--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,15 @@
 databases:
   - name: postgres
+    plan: free
     ipAllowList: []
 
 services:
   - type: web
     name: rails
+    plan: free
     env: ruby
     buildCommand: "./bin/render-build.sh"
-    startCommand: bundle exec rails s
+    startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: RAILS_MASTER_KEY
         sync: false
@@ -15,7 +17,6 @@ services:
         fromDatabase:
           name: postgres
           property: connectionString
-
   - type: redis
     name: redis
     ipAllowList: []
